<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.android.quizzapp.QuizActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/text"
            android:text="@string/question1_rg"
            android:textSize="@dimen/content" />

        <RadioGroup
            android:id="@+id/question_one_rg"
            style="@style/radio_group">

            <RadioButton
                android:id="@+id/q1op1"
                style="@style/radio_button"
                android:text="@string/question1_option1_rb" />

            <RadioButton
                android:id="@+id/q1op2"
                style="@style/radio_button"
                android:text="@string/question1_option2_rb" />

            <RadioButton
                android:id="@+id/q1op3"
                style="@style/radio_button"
                android:text="@string/question1_option3_rb" />

            <RadioButton
                android:id="@+id/q1op4"
                style="@style/radio_button"
                android:text="@string/question1_option4_rb" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white">

        </View>

        <TextView
            style="@style/text"
            android:text="@string/question2"
            android:textSize="@dimen/content" />


        <CheckBox
            android:id="@+id/question_2_option_1_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/standardmrgn"
            android:fontFamily="casual"
            android:paddingLeft="@dimen/paddinglft"
            android:text="@string/q2op1" />

        <CheckBox
            android:id="@+id/question_2_option_2_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/standardmrgn"
            android:fontFamily="casual"
            android:paddingLeft="@dimen/paddinglft"
            android:text="@string/q2op2" />

        <CheckBox
            android:id="@+id/question_2_option_3_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/standardmrgn"
            android:fontFamily="casual"
            android:paddingLeft="@dimen/paddinglft"
            android:text="@string/q2op3" />

        <CheckBox
            android:id="@+id/question_2_option_4_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/standardmrgn"
            android:layout_marginLeft="@dimen/standardmrgn"
            android:fontFamily="casual"
            android:paddingLeft="@dimen/paddinglft"
            android:text="@string/q2op4" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white">

        </View>


        <TextView
            style="@style/text"
            android:text="@string/question3_rg"
            android:textSize="@dimen/content" />

        <RadioGroup
            android:id="@+id/question_three_rg"
            style="@style/radio_group">

            <RadioButton
                android:id="@+id/q3op1"
                style="@style/radio_button"
                android:text="@string/question3_option1_rb" />

            <RadioButton
                android:id="@+id/q3op2"
                style="@style/radio_button"
                android:text="@string/question3_option2_rb" />

            <RadioButton
                android:id="@+id/q3op3"
                style="@style/radio_button"
                android:text="@string/question3_option3_rb" />

            <RadioButton
                android:id="@+id/q3op4"
                style="@style/radio_button"
                android:text="@string/question3_option4_rb" />


        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white">

        </View>

        <TextView
            style="@style/text"
            android:text="@string/question4_rg"
            android:textSize="@dimen/content" />

        <RadioGroup
            android:id="@+id/question_four_rg"
            style="@style/radio_group">

            <RadioButton
                android:id="@+id/q4op1"
                style="@style/radio_button"
                android:text="@string/question4_option1_rb" />

            <RadioButton
                android:id="@+id/q4op2"
                style="@style/radio_button"
                android:text="@string/question4_option2_rb" />

            <RadioButton
                android:id="@+id/q4op3"
                style="@style/radio_button"
                android:text="@string/question4_option3_rb" />

            <RadioButton
                android:id="@+id/q4op4"
                style="@style/radio_button"
                android:text="@string/question4_option4_rb" />


        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white">

        </View>

        <TextView
            style="@style/text"
            android:text="@string/question5_rg"
            android:textSize="@dimen/content" />

        <RadioGroup
            android:id="@+id/question_five_rg"
            style="@style/radio_group">

            <RadioButton
                android:id="@+id/q5op1"
                style="@style/radio_button"
                android:text="@string/question5_option1_rb" />

            <RadioButton
                android:id="@+id/q5op2"
                style="@style/radio_button"
                android:text="@string/question5_option2_rb" />

            <RadioButton
                android:id="@+id/q5op3"
                style="@style/radio_button"
                android:text="@string/question5_option3_rb" />

            <RadioButton
                android:id="@+id/q5op4"
                style="@style/radio_button"
                android:text="@string/question5_option4_rb" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white">

        </View>

        <TextView
            style="@style/text"
            android:text="@string/question6_rg"
            android:textSize="@dimen/content" />

        <RadioGroup
            android:id="@+id/question_six_rg"
            style="@style/radio_group">

        <RadioButton
            android:id="@+id/q6op1"
            style="@style/radio_button"
            android:text="@string/question6_option1_rb" />

        <RadioButton
            android:id="@+id/q6op2"
            style="@style/radio_button"
            android:text="@string/question6_option2_rb" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white">

        </View>


        <TextView
            style="@style/text"
            android:text="@string/question7_rg"
            android:textSize="@dimen/content" />

        <RadioGroup
            android:id="@+id/question_seven_rg"
            style="@style/radio_group">

            <RadioButton
                android:id="@+id/q7op1"
                style="@style/radio_button"
                android:text="@string/question7_option1_rb" />

            <RadioButton
                android:id="@+id/q7op2"
                style="@style/radio_button"
                android:text="@string/question7_option2_rb" />

            <RadioButton
                android:id="@+id/q7op3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:paddingLeft="@dimen/paddinglft"
                android:text="@string/question7_option3_rb" />

            <RadioButton
                android:id="@+id/q7op4"
                style="@style/radio_button"
                android:text="@string/question7_option4_rb" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white">

        </View>

        <TextView
            style="@style/text"
            android:text="@string/question8_rg"
            android:textSize="@dimen/content" />

        <RadioGroup
            android:id="@+id/question_eight_rg"
            style="@style/radio_group">

            <RadioButton
                android:id="@+id/q8op1"
                style="@style/radio_button"
                android:text="@string/question18_option1_rb" />

            <RadioButton
                android:id="@+id/q8op2"
                style="@style/radio_button"
                android:text="@string/question8_option2_rb" />

            <RadioButton
                android:id="@+id/q8op3"
                style="@style/radio_button"
                android:text="@string/question8_option3_rb" />

            <RadioButton
                android:id="@+id/q8op4"
                style="@style/radio_button"
                android:text="@string/question8_option4_rb" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white">

        </View>

        <TextView
            style="@style/text"
            android:text="@string/question9_rg"
            android:textSize="@dimen/content" />

        <RadioGroup
            android:id="@+id/question_nine_rg"
            style="@style/radio_group">

            <RadioButton
                android:id="@+id/q9op1"
                style="@style/radio_button"
                android:text="@string/question9_option1_rb" />

            <RadioButton
                android:id="@+id/q9op2"
                style="@style/radio_button"
                android:text="@string/question9_option2_rb" />

            <RadioButton
                android:id="@+id/q9op3"
                style="@style/radio_button"
                android:text="@string/question9_option3_rb" />

            <RadioButton
                android:id="@+id/q9op4"
                style="@style/radio_button"
                android:text="@string/question9_option4_rb" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white">

        </View>

        <TextView
            style="@style/text"
            android:text="@string/question10_et"
            android:textSize="@dimen/content" />


        <EditText
            android:id="@+id/question_ten_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/standardmrgn"
            android:layout_marginLeft="@dimen/standardmrgn"
            android:layout_marginRight="@dimen/standardmrgn"
            android:inputType="number"
            android:backgroundTint="@color/red"
            android:hint="@string/question10_et_hint" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:onClick="submitAnswers"
            android:text="@string/submitButton"
            android:textColor="@color/white" />

    </LinearLayout>


</ScrollView>
